<resources>
    <string name="app_name">Oud</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="title_premium">Premium</string>
    <string name="title_settings">Settings</string>

    <string name="you_are_offline">You are offline !!</string>
    <string name="connection_failed">Connection failed.</string>

    <string name="offline">"You're offline !!"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="connect_with_facebook">connect with facebook</string>

    <string name="facebook_app_id">2977054005685077</string>
    <string name="fb_login_protocol_scheme">fb2977054005685077</string>

    <!--other facebook app  3359308630752975 -->
    <string name="rename">Rename</string>

    <string name="track_loading">There is problem to load data</string>


    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>


    <string name="popular_songs">Popular songs</string>
    <string name="albums">Albums</string>
    <string name="similar_artists">Similar artists</string>
    <string name="about">About</string>
    <string name="no_songs_to_show">No songs to show</string>
    <string name="no_albums_to_show">No albums to show</string>
    <string name="no_artists_to_show">No artists to show</string>

    <string name="you_have_no_liked_tracks">You have no liked tracks</string>
    <string name="you_dont_follow_any_playlist">You don\'t follow any playlist</string>
    <string name="you_dont_follow_any_artist">You don\'t follow any artist</string>
    <string name="you_dont_have_any_notifications">You don\'t have any notifications</string>
    <string name="create_playlist">Create playlist ...</string>

    <string name="download_failed">Download failed !!</string>
    <string name="credit">Credit :</string>
    <string name="oud_coins">Oud Coins</string>
    <string name="coupon">Coupon</string>
    <string name="redeem">REDEEM</string>
    <string name="current_plan">Current plan :</string>
    <string name="free_plan">Free</string>
    <string name="end_date">End date :</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="extend">EXTEND</string>
    <string name="please_enter_a_valid_coupon">Please enter a valid coupon</string>
    <string name="you_dont_have_enough_credit">You don\'t have enough credit</string>
    <string name="unknown_server_error">Unknown error</string>
    <string name="you_are_not_subscribed">You are not subscribed</string>
    <string name="you_have_no_downloaded_tracks">You have no offline tracks</string>


</resources>
