<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library"
        android:title="@string/title_library"/>

    <item
        android:id="@+id/navigation_premium"
        android:icon="@drawable/ic_premium"
        android:title="@string/title_premium"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings2"
        android:title="@string/title_settings"/>

</menu>
