<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLoginFragment"
    android:background="@drawable/gradient_login_color"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""

        />


    <Button
        android:id="@+id/Btn_to_signup_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_edge_button"
        android:textColor="@color/paleOrange"
        />
    <Button
        android:id="@+id/Btn_to_facebook_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/connect_with_facebook"
        android:background="@drawable/rounded_edge_button"
        android:backgroundTint="@color/paleOrange"

        />

    <Button
        android:id="@+id/Btn_to_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        style="?android:attr/borderlessButtonStyle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""

        />

    <Button
        android:id="@+id/btn_home_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home (Test)" />



</LinearLayout>