<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".user.fragments.premium.redeemsubscribe.PremiumRedeemSubscribeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_subscribe_extend"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/subscribe"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatImageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_coupon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/current_plan"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_subscribe_extend" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_plan"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_subscribe_extend"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView4" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_txt_coupon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@id/btn_redeem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_redeem"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/redeem"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_txt_coupon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_txt_coupon"
        app:layout_constraintTop_toTopOf="@+id/edit_txt_coupon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_profile_pic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_oud_loading_circular"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_oud_coin"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView4"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_oud_coin"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/oud_coins"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_pic" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/crowd_scene_small"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_subscribe_extend"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_credit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/credit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_pic"
        app:layout_constraintStart_toEndOf="@+id/img_profile_pic"
        app:layout_constraintTop_toBottomOf="@id/txt_user_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/coupon"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_txt_coupon"
        app:layout_constraintEnd_toStartOf="@+id/edit_txt_coupon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_txt_coupon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="User name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/txt_credit"
        app:layout_constraintStart_toEndOf="@+id/img_profile_pic"
        app:layout_constraintTop_toTopOf="@+id/img_profile_pic"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/view_block_ui_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_premium_redeem_subscribe"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>